# champss_software

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .precommit-manual.yaml  CHANGELOG.md  Dockerfile  Folding_ks.ipynb  README.md  champss-processing-config.yml  champss-processing-workspace.yml  champss.workspace.yml  download_files.py  pyproject.toml  run_once_flag.txt  update_all_poetry_locks.sh  update_all_repos.sh  update_common_files.sh
.github/workflows/: benchmark.yml  continuous-deployment.yml  continuous-integration.yml  dispatch-tests.yml  example.yml  image.yml  precommit.yml  release.yml  run-tests.yml  test.yml
champss/: __init__.py  example.py  retry.py  test.py
champss/FFA/: FFA_search.py  FFA_search_CHIMEPulsar.py  FFA_search_CHIMEPulsar_tests.ipynb  FFA_search_candtest.py  clustering_FFA.py  detections_B0154+61.csv  detections_B0154+61_labels.csv  detections_B0154+61_sigmas.csv  detections_B2002+31.csv  detections_B2002+31_filtered.csv  detections_empty.csv  detections_width_B0154+61.csv  detections_width_B2002+31.csv  detections_width_empty.csv  interfaces_FFA.py  multiday_search.sh  riptide_tests.ipynb  single_pointing_FFA.py  sps_config_Laurent.yml
champss/beamformer/: .gitignore  MANIFEST.in  README.md  pyproject.toml
champss/beamformer/beamformer/: __init__.py  cli.py  skybeam.py
champss/beamformer/tests/: test_dm_map.py  test_package.py  test_pointing_mapper.py  test_pointing_strategist.py  test_skybeam.py
champss/candidate-processor/: CHANGELOG.md  cli.py  pyproject.toml
champss/controller/: README.md  pyproject.toml
champss/fdmt/tests/: test_fdmt.py
champss/folding/: CHANGELOG.md  README.md  pyproject.toml
champss/folding/folding/: archive_utils.py  filter_mpcandidates.py  fold_batch.py  fold_candidate.py  fold_multiday.py  localize.py  plot_candidate.py
champss/folding/foldutils/: add_tzpar_fsdb.py  database_utils.py  foldinfo_csv.py
champss/folding/multiday_search/: confirm_cand.py  fold_multiday.py  load_profiles.py  multidayfold_pipeline.py  phase_aligned_search.py
champss/folding/timing/: add_timing_source.py
champss/folding/utils/: foldinfo_csv.py
champss/injections/: fast_test.yml  frequency_injections.txt  make_fake.py
champss/multi-pointing/: CHANGELOG.md  README.md  pyproject.toml
champss/pipeline_batch_db/: README.md  champss.workspace.yml  l1-msgpack-requirements.txt  pyproject.toml
champss/pipeline_batch_db/pipeline-scripts/: run-benchmark.sh
champss/pipeline_batch_db/sps_pipeline/: __init__.py  beamform.py  cands.py  cleanup.py  clear_raw_data.py  dedisp.py  hhat.py  pipeline.py  processing.py  ps_cumul_stack.py  quant.py  rfi.py  scheduling.py  sps_config.yml  stack_scheduling.py  utils.py  workflow.py
champss/pipeline_batch_db/tests/: test_package_data.py
champss/ps-processes/: README.md  pyproject.toml
champss/rfi-mitigation/: CHANGELOG.md  MANIFEST.in  README.md  cli.py  pyproject.toml
champss/rfi-mitigation/docs/source/: authentication.rst  conf.py  developer.rst
champss/rfi-mitigation/rfi_mitigation/: pipeline.py  reader.py
champss/rfi-mitigation/rfi_mitigation/cleaners/: cleaners.py  periodic.py
champss/rfi-mitigation/rfi_mitigation/data/: birdies.yaml
champss/rfi-mitigation/rfi_mitigation/utilities/: cleaner_utils.py  common.py  conversion.py  create_birdie_report.py  noise_utils.py
champss/rfi-mitigation/tests/: test_cleaners.py  test_utilities.py
champss/scheduler/: README.md  pyproject.toml
champss/scheduler/scheduler/: utils.py  workflow.py
champss/sps-common/: MANIFEST.in  pyproject.toml
champss/sps-databases/: CHANGELOG.md  README.md  pyproject.toml
champss/sps-dedispersion/: README.md  pyproject.toml
champss/sps-dedispersion/sps_dedispersion/: chunk.py  dedisperse.py  linearize.py
champss/sps-dedispersion/sps_dedispersion/fdmt/: cpu_fdmt.py
champss/sps-ops/: CHANGELOG.md  LICENSE  pyproject.toml
champss/sps-ops/sps_ops/scripts/: delete_exited_pipeline_containers.py  delete_old_docker_images.py  delete_stalling_pipeline_containers.py  plot_processes_cadvisor_metrics.py  update-common-files-to-all-repos.sh
champss/sps-ops/sps_ops/stacks/: node-exporter-entrypoint.sh  prometheus.yml
champss/sps-pipeline/: README.md  pyproject.toml
champss/spshuff/: README.md  makefile  setup.py
monorepo_test/beamformer/: CHANGELOG.md  pyproject.toml
monorepo_test/candidate-processor/: README.md  cli.py  pyproject.toml
monorepo_test/controller/: CHANGELOG.md  pyproject.toml
monorepo_test/fdmt/: pyproject.toml
monorepo_test/fdmt/fdmt/: fdmt_njit.py
monorepo_test/folding/: README.md  pyproject.toml
monorepo_test/multi-pointing/: MANIFEST.in  pyproject.toml
monorepo_test/multi-pointing/sps_multi_pointing/: __init__.py  data_reader.py  grouper.py  sps_config.yml
monorepo_test/multi-pointing/sps_multi_pointing/classifier/: __init__.py  __main__.py  classifier.py  trainer.py
monorepo_test/multi-pointing/sps_multi_pointing/known_source_sifter/: add_tzpar_sources.py  known_source_convert.py  known_source_filters.py  known_source_sifter.py  ks_database_210203_1541.npy  write_psrcat_to_ksdb.py
monorepo_test/multi-pointing/sps_multi_pointing/simulator/: __init__.py  pointing.py  reference_angles.npy  utils.py
monorepo_test/multi-pointing/tests/: conftest.py  test_simulator.py
monorepo_test/pipeline_batch_db/: CHANGELOG.md  MANIFEST.in  pyproject.toml
monorepo_test/pipeline_batch_db/pipeline-scripts/: move-sps-acqs.sh  reprocess-acqs.sh  run-benchmark.sh
monorepo_test/pipeline_batch_db/sps_pipeline/: cands.py  clear_raw_data.py  clear_workflow.py  dedisp.py  pipeline.py  ps_cumul_stack.py  quant.py  sps_config.yml  utils.py
monorepo_test/pipeline_batch_db/tests/: test_cli.py  test_package_data.py
monorepo_test/ps-processes/: CHANGELOG.md  pyproject.toml
monorepo_test/rfi-mitigation/: pyproject.toml
monorepo_test/specs/: README.md  mkdocs.yml
monorepo_test/sps-common/: CHANGELOG.md  README.md
monorepo_test/sps-dedispersion/: CHANGELOG.md  pyproject.toml
monorepo_test/sps-ops/: README.md  pyproject.toml
monorepo_test/spshuff/: setup.py
(+256 files in other folders)
