[tool.poetry]
name = "champss"
version = "1.0.0"
description = "CHAMPSS Codebase"
authors = ["CHAMPSS <chime_spawg@physics.mcgill.>"]
license = "GPLv3"
readme = "README.md"
exclude = [
    "tests"
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
beam-model = {git = "ssh://git@github.com/CHIMEFRB/beam-model"}
beamformer = {path = "./monorepo_test/beamformer"}}
candidate-processor = {path = "./monorepo_test/candidate-processor"}}
chime-frb-api = {git = "ssh://git@github.com/CHIMEFRB/frb-api"}
controller = {path = "./monorepo_test/controller"}}
fdmt = {path = "./monorepo_test/fdmt"}}
folding = {path = "./monorepo_test/folding"}}
ps-processes = {path = "./monorepo_test/ps-processes"}}
rfi-mitigation = {path = "./monorepo_test/rfi-mitigation"}}
spshuff = {path = "./monorepo_test/spshuff"}}
sps-common = {path = "./monorepo_test/sps-common"}}
sps-databases = {path = "./monorepo_test/sps-databases"}}
sps-dedispersion = {path = "./monorepo_test/sps-dedispersion"}}
sps-multi-pointing = {path = "./monorepo_test/multi-pointing"}}
sps-ops = {path = "./monorepo_test/sps-ops"}}
sps_pipeline = {path = "./monorepo_test/pipeline_batch_db"}}

[tool.poetry.group.dev.dependencies]
commitizen = "^3.4.0"
mypy = "^1.4.0"
pre-commit = "^3.3.3"
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
