[tool.poetry]
name = "champss"
version = "1.0.0"
description = "CHAMPSS Codebase"
authors = ["CHAMPSS <chime_spawg@physics.mcgill.>"]
license = "GPLv3"
readme = "README.md"
exclude = [
    "tests"
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
beam-model = {git = "ssh://git@github.com/CHIMEFRB/beam-model"}
beamformer = {path = "./champss/beamformer"}
candidate-processor = {path = "./champss/candidate-processor"}
chime-frb-api = {git = "ssh://git@github.com/CHIMEFRB/frb-api"}
controller = {path = "./champss/controller"}
fdmt = {path = "./champss/fdmt"}
folding = {path = "./champss/folding"}
ps-processes = {path = "./champss/ps-processes"}
rfi-mitigation = {path = "./champss/rfi-mitigation"}
spshuff = {path = "./champss/spshuff"}
sps-common = {path = "./champss/sps-common"}
sps-databases = {path = "./champss/sps-databases"}
sps-dedispersion = {path = "./champss/sps-dedispersion"}
sps-multi-pointing = {path = "./champss/multi-pointing"}
sps-ops = {path = "./champss/sps-ops"}
sps_pipeline = {path = "./champss/pipeline_batch_db"}

[tool.poetry.group.dev.dependencies]
commitizen = "^3.4.0"
mypy = "^1.4.0"
pre-commit = "^3.3.3"
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
