[tool.poetry]
name = "sps-pipeline"
version = "1.5.2"
description = "CHIME SPS Pipeline"
authors = ["CHIME SPS <chime_spawg@physics.mcgill.>"]
license = "GPLv3"
readme = "README.md"
exclude = [
    "tests"
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
beam-model = {git = "ssh://git@github.com/CHIMEFRB/beam-model"}
beamformer = {path = "../beamformer"}
candidate-processor = {path = "../candidate-processor"}
chime-frb-api = {git = "ssh://git@github.com/CHIMEFRB/frb-api"}
folding = {path = "../folding"}
ps-processes = {path = "../ps-processes"}
rfi-mitigation = {path = "../rfi-mitigation"}
spshuff = {path = "../spshuff"}
sps-common = {path = "../sps-common"}
sps-databases = {path = "../sps-databases"}
sps-dedispersion = {path = "../sps-dedispersion"}
sps-multi-pointing = {path = "../multi-pointing"}
astropy = "~5.2"
click = "^8.1.4"
docker = "^6.1.3"
omegaconf = "^2.3.0"
prometheus-client = "^0.17.1"
prometheus-api-client = "^0.5.4"
pytz = "^2023.3"
pyyaml = "^6.0"
pyroscope-io = "^0.8.5"
requests = "<2.32.0"
slack-sdk = "^3.26.1"

[tool.poetry.group.dev.dependencies]
commitizen = "^3.4.0"
mypy = "^1.4.0"
pre-commit = "^3.3.3"
pytest = "^7.3.2"

[tool.poetry.scripts]
run-pipeline = "sps_pipeline.pipeline:main"
pointing-with-data = "sps_pipeline.pipeline:find_pointing_with_data"
run-stack-search-pipeline = "sps_pipeline.pipeline:stack_and_search"
find-all-processes = "sps_pipeline.processing:find_all_pipeline_processes"
run-all-processes = "sps_pipeline.processing:run_all_pipeline_processes"
start-processing-services = "sps_pipeline.processing:start_processing_services"
start-processing-manager = "sps_pipeline.processing:start_processing_manager"
start-processing-cleanup = "sps_pipeline.processing:start_processing_cleanup"
clear-workflow-buckets = "sps_pipeline.workflow:clear_workflow_buckets"
clear-workflow-results = "sps_pipeline.workflow:clear_workflow_results"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
