[tool.poetry]
name = "sps-dedispersion"
version = "0.1.0"
description = "CHIME SPS Dedispersion"
authors = ["CHIME SPS <chime_spawg@physics.mcgill.>"]
license = "Apache"
readme = "README.md"
exclude = [
    "tests"
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
sps-common = {path = "../sps-common", develop=true}
astropy = "~5.2"
attrs = "^22.2"
numpy = "^1.24.3"
prometheus-client = "^0.17"
pytz = "^2023.3"
scipy = "^1.10"
numba = "^0.58"

[tool.poetry.group.dev.dependencies]
commitizen = "^3.4.0"
mypy = "^1.4.0"
pre-commit = "^3.3.3"
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
