[tool.poetry]
name = "fdmt"
version = "0.1.0"
description = "Fast Dispersion Measure Transform (FDMT) for SPS"
authors = ["CHIME SPS <chime_spawg@physics.mcgill.>"]
license = "MIT"
readme = "README.md"
exclude = [
    "tests"
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
astropy = "~5.2"
attrs = "^22.2"
numpy = "^1.24"
prometheus-client = "^0.17"
pytz = "^2023.3"
scipy = "^1.10"
numba = "^0.58"
scalene = "^1"
openai = "^1.3.5"

[tool.poetry.group.dev.dependencies]
commitizen = "^3.4"
mypy = "^1.4"
pre-commit = "^3.3"
pytest = "^7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
