[tool.poetry]
name = "sps-pipeline"
version = "1.2.0"
description = "CHIME SPS Pipeline"
authors = ["CHIME SPS <chime_spawg@physics.mcgill.>"]
license = "GPLv3"
readme = "README.md"
exclude = [
    "tests"
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
beam-model = {git = "ssh://git@github.com/CHIMEFRB/beam-model"}
beamformer = {path = "../beamformer"}
candidate-processor = {path = "../candidate-processor"}
chime-frb-api = {git = "ssh://git@github.com/CHIMEFRB/frb-api"}
fdmt = {path = "../fdmt"}
folding = {path = "../folding"}
ps-processes = {path = "../ps-processes"}
rfi-mitigation = {path = "../rfi-mitigation"}
spshuff = {path = "../spshuff"}
sps-common = {path = "../sps-common"}
sps-databases = {path = "../sps-databases"}
sps-dedispersion = {path = "../sps-dedispersion"}
astropy = "~5.2"
click = "^8.1.4"
docker = "^6.1.3"
omegaconf = "^2.3.0"
prometheus-client = "^0.17.1"
prometheus-api-client = "^0.5.4"
pytz = "^2023.3"
pyyaml = "^6.0"
pyroscope-io = "^0.8.5"
slack-sdk = "^3.26.1"

[tool.poetry.group.dev.dependencies]
commitizen = "^3.4.0"
mypy = "^1.4.0"
pre-commit = "^3.3.3"
pytest = "^7.3.2"

[tool.poetry.scripts]
run-pipeline = "sps_pipeline.pipeline:main"
pointing-with-data = "sps_pipeline.pipeline:find_pointing_with_data"
run-stack-search-pipeline = "sps_pipeline.pipeline:stack_and_search"
find-all-processes = "sps_pipeline.pipeline:find_all_available_processes"
run-all-processes = "sps_pipeline.pipeline:process_all_processes"
start-continuous-daily-processing = "sps_pipeline.pipeline:start_continuous_daily_processing"
clear-workflow-results = "sps_pipeline.clear_workflow:clear_workflow_results"
clear-workflow-buckets = "sps_pipeline.clear_workflow:clear_workflow_buckets"
clear-workflow = "sps_pipeline.clear_workflow:clear_workflow"
clear-raw-data = "sps_pipeline.clear_raw_data:clear_raw_data"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
